added input fields that will help to demonstrate inserting values in array

--- a/array_insert.html
+++ b/array_insert.html
@@ -8,6 +8,8 @@
     <title>Insert value in array</title>
 </head>
 <body>
-    
+    <input type="number" name="Position" id="Position" placeholder="Please enter postion u need to change!">
+    <input type="number" name="newEl" id="newEl" placeholder="Please enter element">
+    <button onclick="insertnewelement()">Insert in Array</button>
 </body>
 </html>
